[gd_scene load_steps=46 format=3 uid="uid://hvtxo3crwfxh"]

[ext_resource type="Script" uid="uid://boee4cdtnk6ht" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="Texture2D" uid="uid://bagbmqyntfyo4" path="res://assets/crosshair.png" id="2_d2wvv"]
[ext_resource type="PackedScene" uid="uid://d4j4p8ebdtbhu" path="res://assets/Skins/player_model.tscn" id="2_g2els"]
[ext_resource type="Script" uid="uid://bltlamlq73lid" path="res://scripts/firstperson_models.gd" id="2_smehm"]
[ext_resource type="Texture2D" uid="uid://l64qk4criola" path="res://assets/ability_indicater.png" id="3_a8ls1"]
[ext_resource type="PackedScene" uid="uid://dnxabfrqyaj8k" path="res://assets/Models/Sword.gltf" id="3_qhqgy"]
[ext_resource type="Script" uid="uid://bi8gbb4ldi6sv" path="res://scripts/weapon_inventory.gd" id="3_qlg0r"]
[ext_resource type="PackedScene" uid="uid://dea3gai8ilirp" path="res://scenes/scythe_fpm.tscn" id="3_y4r1p"]
[ext_resource type="PackedScene" uid="uid://drjcdc7xmspkx" path="res://scenes/sword_fpm.tscn" id="4_d2wvv"]
[ext_resource type="PackedScene" uid="uid://dnvqoj13lw23f" path="res://assets/Models/Scythe.gltf" id="4_dqkch"]
[ext_resource type="Texture2D" uid="uid://c57uvc7pdc1g4" path="res://assets/attack_indicater.png" id="4_qfm1y"]
[ext_resource type="Texture2D" uid="uid://buh5g5ladsxed" path="res://assets/trait_indicater.png" id="5_a38lo"]
[ext_resource type="Script" uid="uid://bwcrqwvkantg0" path="res://scripts/sword.gd" id="5_fjrip"]
[ext_resource type="Texture2D" uid="uid://ceb1sm4lqorrk" path="res://assets/protec.png" id="6_4ni07"]
[ext_resource type="FontFile" uid="uid://bcx24ug5gh6pa" path="res://assets/Kenney Mini Square.ttf" id="6_tuyoq"]
[ext_resource type="Shader" uid="uid://s74pi2vju8pl" path="res://scripts/shaders/pixelate.gdshader" id="7_l71n6"]
[ext_resource type="Texture2D" uid="uid://mblnkohmbep2" path="res://demo/line.png" id="8_fulsm"]
[ext_resource type="PackedScene" uid="uid://dnplu00oudrbk" path="res://scenes/bow_fpm.tscn" id="8_i4ail"]
[ext_resource type="Shader" uid="uid://bp674m2m00exb" path="res://scripts/shaders/vhs.gdshader" id="8_ke2ow"]
[ext_resource type="Script" uid="uid://85fxs453u4bo" path="res://addons/LineRenderer/line_renderer.gd" id="9_4r5pv"]
[ext_resource type="Shader" uid="uid://dqu7ojexfyrmk" path="res://scripts/shaders/vhs2.gdshader" id="9_ujl30"]
[ext_resource type="Script" uid="uid://b52lr6l7r1541" path="res://scripts/scythe.gd" id="11_f1ej7"]
[ext_resource type="AudioStream" uid="uid://dvlvfauul814u" path="res://assets/Sounds/8 Player Critical Attack Nr 1 Minecraft Sound - Sound Effect for.mp3" id="12_jej6c"]
[ext_resource type="AudioStream" uid="uid://ckjnxws20bebh" path="res://assets/Sounds/fading a-.mp3" id="13_f1ej7"]
[ext_resource type="PackedScene" uid="uid://dsk18jgylakhm" path="res://assets/Models/bow.gltf" id="16_60mlk"]
[ext_resource type="Script" uid="uid://jplu3i4gu3yh" path="res://scripts/bow.gd" id="17_i4ail"]

[sub_resource type="BoxShape3D" id="BoxShape3D_g2els"]
size = Vector3(0.75, 1.4995117, 0.75)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y4r1p"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0, 1, 0, 0.4)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fulsm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4r5pv"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(1, 0.8862745, 0, 0.4)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 6

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ke2ow"]
shader = ExtResource("7_l71n6")
shader_parameter/pixelation = 0.0050000002375
shader_parameter/opacity = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ujl30"]
shader = ExtResource("8_ke2ow")
shader_parameter/vhs_resolution = Vector2(320, 240)
shader_parameter/samples = 2
shader_parameter/crease_noise = 2.0
shader_parameter/crease_opacity = 1.0
shader_parameter/filter_intensity = 0.1
shader_parameter/tape_crease_smear = 0.2
shader_parameter/tape_crease_intensity = 0.2
shader_parameter/tape_crease_jitter = 0.1
shader_parameter/tape_crease_speed = 0.5
shader_parameter/tape_crease_discoloration = 1.0
shader_parameter/bottom_border_thickness = 6.0
shader_parameter/bottom_border_jitter = 6.0
shader_parameter/noise_intensity = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_31cv2"]
shader = ExtResource("9_ujl30")
shader_parameter/intensity = 5.0
shader_parameter/threshold = 0.80000001192096

[sub_resource type="Animation" id="Animation_3v2ag"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-4.223997e-10, 1.579523, 0.17453296)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, -1.03, -1.025)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, -1.03, -1.025)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.579523, 0.17453292)]
}

[sub_resource type="Animation" id="Animation_ujl30"]
resource_name = "ability v2"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_31cv2"]
resource_name = "hit 2"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jej6c"]
_data = {
&"RESET": SubResource("Animation_3v2ag"),
&"ability v2": SubResource("Animation_ujl30"),
&"hit 2": SubResource("Animation_31cv2")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_d2wvv"]
size = Vector3(1.5, 1.5, 0.1)

[sub_resource type="SphereShape3D" id="SphereShape3D_fulsm"]
radius = 0.75

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_60mlk"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.458824, 1, 1, 1)
albedo_texture = ExtResource("8_fulsm")

[sub_resource type="ImmediateMesh" id="ImmediateMesh_ujl30"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_3vyb7"]
radius = 0.375
height = 1.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3vyb7"]
albedo_color = Color(0.13803378, 0.13803375, 0.13803375, 1)

[sub_resource type="BoxMesh" id="BoxMesh_g2els"]
material = SubResource("StandardMaterial3D_3vyb7")
size = Vector3(0.5, 0.25, 0.5)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_3vyb7"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("TempPlayerModel/Blobert/UpperBody/Head:rotation")
properties/2/spawn = false
properties/2/replication_mode = 2
properties/3/path = NodePath("TempPlayerModel/AnimationPlayer:current_animation")
properties/3/spawn = false
properties/3/replication_mode = 2
properties/4/path = NodePath("TempPlayerModel/AnimationPlayer:active")
properties/4/spawn = false
properties/4/replication_mode = 2
properties/5/path = NodePath("TempPlayerModel/ArmAnimator:current_animation")
properties/5/spawn = false
properties/5/replication_mode = 2
properties/6/path = NodePath("TempPlayerModel/Blobert/UpperBody/RightArm/GripSpot:current_weapon")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath("Nametag:text")
properties/7/spawn = true
properties/7/replication_mode = 2
properties/8/path = NodePath("TempPlayerModel/Blobert/UpperBody/RightArm/GripSpot/Weapons/Sword:visible")
properties/8/spawn = true
properties/8/replication_mode = 1
properties/9/path = NodePath("TempPlayerModel/Blobert/UpperBody/RightArm/GripSpot/Weapons/Scythe:visible")
properties/9/spawn = true
properties/9/replication_mode = 1
properties/10/path = NodePath("head/HitBar:target_position")
properties/10/spawn = true
properties/10/replication_mode = 2
properties/11/path = NodePath("head/HitBar:margin")
properties/11/spawn = true
properties/11/replication_mode = 1
properties/12/path = NodePath("SoundFX/death_sfx:playing")
properties/12/spawn = true
properties/12/replication_mode = 1
properties/13/path = NodePath("head/GrappleLineFPM Marker/LineRenderer3D:points")
properties/13/spawn = true
properties/13/replication_mode = 1
properties/14/path = NodePath("head/GrappleLineFPM Marker/LineRenderer3D:visible")
properties/14/spawn = true
properties/14/replication_mode = 1

[node name="PlayerRoot" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
collision_layer = 3
floor_stop_on_slope = false
floor_constant_speed = true
floor_snap_length = 0.2
script = ExtResource("1_3vyb7")

[node name="CollisionBox" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_g2els")

[node name="head" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.99999994, 0, 0, 0, 0.99999994, 0, 0.4, 0)

[node name="Camera3D" type="Camera3D" parent="head"]
fov = 90.0

[node name="UI" type="CanvasLayer" parent="head/Camera3D"]

[node name="MarginContainer" type="MarginContainer" parent="head/Camera3D/UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HealthBar" type="ProgressBar" parent="head/Camera3D/UI/MarginContainer"]
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_y4r1p")
step = 0.1
value = 100.0
allow_lesser = true
show_percentage = false

[node name="OverhealthBar" type="ProgressBar" parent="head/Camera3D/UI/MarginContainer"]
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_fulsm")
theme_override_styles/fill = SubResource("StyleBoxFlat_4r5pv")
step = 0.1
allow_lesser = true
show_percentage = false

[node name="Score" type="Label" parent="head/Camera3D/UI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Score: "

[node name="TextureRect" type="TextureRect" parent="head/Camera3D/UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_d2wvv")

[node name="CanAttack" type="TextureRect" parent="head/Camera3D/UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = 20.0
offset_right = 40.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_qfm1y")

[node name="AbilityAvailable" type="TextureRect" parent="head/Camera3D/UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -113.0
offset_right = 60.0
offset_bottom = -73.0
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("3_a8ls1")

[node name="TraitAvailable" type="TextureRect" parent="head/Camera3D/UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = -113.0
offset_right = 100.0
offset_bottom = -73.0
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("5_a38lo")

[node name="ParrySheild" type="TextureRect" parent="head/Camera3D/UI"]
modulate = Color(1, 1, 1, 0.39215687)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_4ni07")

[node name="GrappleStaminaBar" type="ProgressBar" parent="head/Camera3D/UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 49.0
offset_top = -63.25
offset_right = 73.0
offset_bottom = 63.25
grow_horizontal = 2
grow_vertical = 2
max_value = 150.0
step = 0.25
fill_mode = 3
show_percentage = false

[node name="Panel" type="Panel" parent="head/Camera3D/UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -93.0
offset_top = -38.0
offset_right = 93.0
offset_bottom = 78.0
grow_horizontal = 2

[node name="RoundTimer" type="RichTextLabel" parent="head/Camera3D/UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -146.5
offset_right = 146.5
offset_bottom = 112.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 46
bbcode_enabled = true
text = "[wave]:P"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="Shaders" type="CanvasLayer" parent="head/Camera3D"]
layer = -1

[node name="Pixelate" type="ColorRect" parent="head/Camera3D/Shaders"]
material = SubResource("ShaderMaterial_ke2ow")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VHS" type="ColorRect" parent="head/Camera3D/Shaders"]
visible = false
material = SubResource("ShaderMaterial_ujl30")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="chroma aberant" type="ColorRect" parent="head/Camera3D/Shaders"]
visible = false
material = SubResource("ShaderMaterial_31cv2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FP Hand" type="Marker3D" parent="head"]
transform = Transform3D(-0.006445465, 0.0011365095, 0.7499715, 0.13023612, 0.7386058, 0, -0.7385776, 0.13023117, -0.006544898, 1, -1.03, -1.025)

[node name="FirstpersonModels" type="Marker3D" parent="head/FP Hand"]
script = ExtResource("2_smehm")

[node name="ScytheFPM" parent="head/FP Hand/FirstpersonModels" instance=ExtResource("3_y4r1p")]

[node name="SwordFPM" parent="head/FP Hand/FirstpersonModels" instance=ExtResource("4_d2wvv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35, 0)
visible = false

[node name="BowFPM" parent="head/FP Hand/FirstpersonModels" instance=ExtResource("8_i4ail")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false

[node name="FPM Anims" type="AnimationPlayer" parent="head"]
root_node = NodePath("../FP Hand/FirstpersonModels")
libraries = {
&"": SubResource("AnimationLibrary_jej6c")
}
autoplay = "RESET"

[node name="HitBar" type="ShapeCast3D" parent="head"]
shape = SubResource("BoxShape3D_d2wvv")
target_position = Vector3(0, 0, -1.5)
collision_mask = 2
collide_with_areas = true
debug_shape_custom_color = Color(0, 0.62873185, 0.35121158, 1)

[node name="GrappleCast" type="ShapeCast3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 0.99999994, 0, 0, 0, 0.99999994, 0, 0, 0)
shape = SubResource("SphereShape3D_fulsm")
target_position = Vector3(0, 0, -30)

[node name="GrappleLineFPM Marker" type="Marker3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1.03, -1.025)

[node name="LineRenderer3D" type="MeshInstance3D" parent="head/GrappleLineFPM Marker"]
transform = Transform3D(-0.006445462, 0.001136509, 0.7499715, 0.13023607, 0.73860544, 3.1679978e-10, -0.7385772, 0.13023114, -0.0065448973, 2, 0, 0)
visible = false
material_override = SubResource("StandardMaterial3D_60mlk")
mesh = SubResource("ImmediateMesh_ujl30")
skeleton = NodePath("../../FP Hand/FirstpersonModels")
script = ExtResource("9_4r5pv")
points = Array[Vector3]([Vector3(0, 0, 0), Vector3(0, 1, 0)])

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.757, 0)
visible = false
mesh = SubResource("CapsuleMesh_3vyb7")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, -0.2)
visible = false
mesh = SubResource("BoxMesh_g2els")

[node name="DashDirection" type="Marker3D" parent="."]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_3vyb7")

[node name="Timers" type="Node" parent="."]

[node name="DashAnimTimer" type="Timer" parent="Timers"]
wait_time = 1.5
one_shot = true

[node name="AttackLength" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="AttackCooldown" type="Timer" parent="Timers"]
one_shot = true

[node name="RespawnTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="WaveDashTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="AbilityCooldown" type="Timer" parent="Timers"]
wait_time = 7.5

[node name="ParryTimer" type="Timer" parent="Timers"]
wait_time = 10.0
one_shot = true

[node name="TraitCooldown" type="Timer" parent="Timers"]

[node name="TempPlayerModel" parent="." instance=ExtResource("2_g2els")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.757, 0)

[node name="LeftArm" parent="TempPlayerModel/Blobert/UpperBody" index="0"]
transform = Transform3D(0.93969256, 0.34202015, 0, -0.34202012, 0.9396926, 0, 0, 0, 0.99999994, -0.3125, 1.890625, 0)

[node name="RightArm" parent="TempPlayerModel/Blobert/UpperBody" index="1"]
transform = Transform3D(0.93969214, -0.3420201, 0, 0.34201995, 0.93969256, 0, 0, 0, 1, 0.3, 1.891, 0.063)

[node name="GripSpot" type="Marker3D" parent="TempPlayerModel/Blobert/UpperBody/RightArm" index="4"]
transform = Transform3D(0.99999994, -8.1247425e-11, 1.7729151e-12, 0, 1, 0, 0, 0, 0.99999994, 0.099999994, -1.0999999, 7.450581e-09)
script = ExtResource("3_qlg0r")

[node name="Weapons" type="Node3D" parent="TempPlayerModel/Blobert/UpperBody/RightArm/GripSpot"]
transform = Transform3D(1, 0, -1.7729154e-12, 2.9802322e-08, 0.99999994, 0, 0, 0, 1, 0, 0, 0)

[node name="Sword" parent="TempPlayerModel/Blobert/UpperBody/RightArm/GripSpot/Weapons" instance=ExtResource("3_qhqgy")]
transform = Transform3D(2.9802322e-08, -6.556708e-08, 1.5000001, -1.5000001, -6.556708e-08, -5.9604645e-08, 6.556708e-08, -1.5, -6.556708e-08, 0, 0, 0)
visible = false
script = ExtResource("5_fjrip")

[node name="Scythe" parent="TempPlayerModel/Blobert/UpperBody/RightArm/GripSpot/Weapons" instance=ExtResource("4_dqkch")]
transform = Transform3D(-4.675154e-20, -5.9604645e-08, 1.5000001, -1.4488889, 0.38822865, -5.9604645e-08, -0.38822865, -1.4488889, -6.556708e-08, 0, 0, 0)
visible = false
script = ExtResource("11_f1ej7")

[node name="Bow" parent="TempPlayerModel/Blobert/UpperBody/RightArm/GripSpot/Weapons" instance=ExtResource("16_60mlk")]
transform = Transform3D(0, -4.371139e-08, 1, -1, -4.371139e-08, 0, 4.371139e-08, -1, -4.3711385e-08, 0, 0, 0)
visible = false
script = ExtResource("17_i4ail")

[node name="Nametag" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
billboard = 1
outline_modulate = Color(0.39181867, 0.39181864, 0.39181864, 1)
text = "Mr. No Name :P"
font = ExtResource("6_tuyoq")

[node name="SoundFX" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="hit_sfx" type="AudioStreamPlayer3D" parent="SoundFX"]
stream = ExtResource("12_jej6c")

[node name="death_sfx" type="AudioStreamPlayer3D" parent="SoundFX"]
stream = ExtResource("13_f1ej7")

[connection signal="animation_finished" from="head/FPM Anims" to="." method="_on_fpm_anims_animation_finished"]
[connection signal="timeout" from="Timers/DashAnimTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Timers/AttackLength" to="." method="_on_attack_length_timeout"]
[connection signal="timeout" from="Timers/AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="Timers/RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="timeout" from="Timers/WaveDashTimer" to="." method="_on_wave_dash_timer_timeout"]
[connection signal="timeout" from="Timers/AbilityCooldown" to="." method="_on_ability_cooldown_timeout"]
[connection signal="timeout" from="Timers/ParryTimer" to="." method="_on_parry_timer_timeout"]
[connection signal="timeout" from="Timers/TraitCooldown" to="." method="_on_trait_cooldown_timeout"]
[connection signal="animation_finished" from="TempPlayerModel/ArmAnimator" to="." method="_on_arm_animator_animation_finished"]

[editable path="TempPlayerModel"]
